mds: add magic to header of open file table

Fixes: http://tracker.ceph.com/issues/24240
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>